--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,15 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "docx": "^7.8.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "file-system": "^2.2.2",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20"
+    "node-stream-zip": "^1.15.0",
+    "nodemon": "^2.0.20",
+    "pdfreader": "^3.0.0",
+    "xlsx": "^0.18.5"
   }
 }
